[project]
name = "code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.10"
dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pandas>=1.5.3",
    "pip>=25.0.1",
    "pyhealth>=1.1.6",
    "scikit-learn>=1.6.1",
    "torch>=2.6.0",
]
